<resources>
    <string name="popular_chart_10">인기차트 톱 10</string>
    <string name="nct_day_dream_lyrics">어디쯤 이런 바람이 불어온 건지 자꾸만 나를 한 걸음씩 떠밀어 어지러 수풀 사잇길 헤매는데 마침 익숙히 스친 멜로디 na na na na na na 고갤 돌린 순간 날 불러낸 듯한 ...</string>
    <string name="trust_lyrics">
    무얼 믿은 걸까 부족했던 내게서 나조차 못 믿던 내게 여태 머문 사람 무얼 봤던 걸까 가진 것도 없던 내게 무작정 내 손을 잡아 날 이끈 사람 최고였어 그대 눈 속에 비친 내 모습 이제는 내게서 그댈 비춰줄 궂은 비가 오면...</string>
    <string name="nct_day_dream">Day Dream(白日夢)</string>
    <string name="lyrics">가사&gt;</string>
    <string name="app_name">음악플레이어</string>
    <string name="singer">가수></string>
    <string name="song">곡></string>
    <string name="album">앨범></string>
    <string name="play">재생</string>
    <string name="text3">정지</string>
    <string name="text1">이전</string>
    <string name="text2">다음</string>
    <string name="select_play">선택재생</string>
    <string name="all_play">전체재생</string>
    <string name="Play_S_name">우산(Love Song)</string>
    <string name="favorite_text">내가 좋아하는 가수</string>
    <string name="popular_chart">인기차트</string>
    <string name="nct127">NCT127</string>
    <string name="rank_song">영웅 (英雄; Kick It)</string>
    <string name="rank_1">1</string>
    <string name="search_text">음악/가수 검색하기</string>
    <string name="mini_search_text">검색</string>
    <string name="mini_home_text">처음으로</string>
    <string name="yeong">임영웅</string>
    <string name="introduction_favorite1">임영웅 소개</string>
    <string name="artist_page_inf1">트로트계의 영웅 가수 임영웅!!! </string>
    <string name="text6">가수 소개&gt;</string>
    <string name="artist_page_inf2">KBS-1TV 아침마당-도전 꿈의 무대 5연승
2014년 KBS 1TV [전국노래자랑]
포천시 편 최우수상
SBS [판타스틱 듀오] 이수영 편 출연
데뷔곡 [미워요] 발매
최종 미스터트롯 진(1위)</string>
    <string name="artist_page_boy1_inf1">To The World 여긴 NCT</string>
    <string name="artist_page_boy1_inf2">NCT 127는 SM 엔터테인먼트에 소속된 NCT의 두 번째 서브 그룹으로 서울의 경도인 127을 통해 서울과 K-POP을 알리겠다는 포부를 담았다. 태용, 재현, 태일, 마크, 윈윈, 해찬, 유타, 도영, 쟈니, 정우로 구성되어 있다.</string>
    <string name="album_name1">NCT #127 Neo Zone - The 2nd Album</string>
    <string name="album_name2">NCT #127 CHERRY BOMB - The 3rd Mini Album</string>
    <string name="album_name3">내일은 미스터트롯 트롯 에이드 베스트</string>
    <string name="album_name4">내일은 미스터트롯 우승자 특전곡</string>
    <string name="nct_love_song">  우산(Love Song)  </string>
    <string name="nct_kick_it">영웅 (Kick It)</string>
    <string name="nct_127f">Elevator(127F)</string>
    <string name="nct_daydream">Day Dream(白日夢)</string>
    <string name="nct_boom">꿈(Boom)</string>
    <string name="nct_pandora">"낮잠(Pandora's Box)"</string>
    <string name="nct_interlude">Interlude: Neo Zone</string>
    <string name="nct_mad">뿔(MAD DOG)</string>
    <string name="nct_sit">Sit Down!</string>
    <string name="nct_love_me">메아리(Love Me Now)</string>
    <string name="nct_white">백야(White Night)</string>
    <string name="nct_not_alone">Not Alone</string>
    <string name="nct_dream">Dreams Come True</string>
    <string name="yeong_wish">바램</string>
    <string name="yeong_sixty_story">어느 60대 노부부이야기</string>
    <string name="yeong_trust_me">이제 나만 믿어요</string>
    <string name="yeong_magic_lily">상사화</string>
    <string name="album_name5">이제 나만 믿어요</string>
    <string name="yeong_elevator">계단말고 엘리베이터</string>
    <string name="text5">가사</string>
    <string name="trust">
        무얼 믿은 걸까 부족했던 내게서\n
        나조차 못 믿던 내게 여태 머문 사람\n
        무얼 봤던 걸까 가진 것도 없던 내게\n
        무작정 내 손을 잡아 날 이끈 사람\n
        최고였어\n
        그대 눈 속에 비친 내 모습\n
        이제는 내게서 그댈 비춰줄게\n
        궂은 비가 오면\n
        세상 가장 큰 그대 우산이 될게\n
        그댄 편히 걸어가요\n
        걷다가 지치면\n
        내가 그대를 안고 어디든 갈게\n
        이제 나만 믿어요\n
        나만 두고 가던\n
        나만 스쳐 간 행운이 모여\n
        그대가 되어서 내게 와준 거야\n
        궂은 비가 오면\n
        세상 가장 큰 그대 우산이 될게\n
        그댄 편히 걸어가요\n
        걷다가 지치면\n
        내가 그대를 안고 어디든 갈게\n
        이제 나만 믿어요\n
        나의 마지막 주인공이 되어\n
        다신 누구 앞에서도\n
        그대는 고개 숙이지 마요\n
        내가 보지 못했던 홀로 고단했던 시간\n
        고맙고 미안해요 사랑해요\n
        이 세상은\n
        우리를 두고 오랜 장난을 했고\n
        우린 속지 않은 거야\n
        이제 울지 마요\n
        좋을 땐 밤새도록 맘껏 웃어요\n
        전부 그대 꺼니까\n
        그대는 걱정 말아요\n
        이제 나만 믿어요</string>
    <string name="daydream_lyrics">
        어디쯤 이런 바람이
불어온 건지
자꾸만 나를 한 걸음씩
떠밀어 어지러
수풀 사잇길
헤매는데 마침
익숙히 스친 멜로디
na na na na na na

고갤 돌린 순간
날 불러낸 듯한
oh you oh my
난 빠져들어가 for love

Loving you feels like Im dreaming
난 널 따라
어디까지 온 걸까 no
Loving you feels like Im dreaming
넌 날 알아
너의 이름이 뭐야? No

huh

신세계 같아 여기는
oh my my my
둘러보기도 바빠
not tired tired tired
순간 어디선가
몰래 나타나
미소만 남긴 cheshire cat

이 모두를 내게만
다 열어 준 듯한
oh you and I
더 빠져들어가 for love

Loving you feels like Im dreaming
난 널 따라
어디까지 온 걸까 no
Loving you feels like Im dreaming
넌 날 알아
너의 이름이 뭐야? no

걸음이 아주 빨라
저만치 나를 앞서
그럼 눈을 감어
그렇게 너를 찾아
쏟아낸 질문
그저 티 없이
넌 미소 지을 뿐
다시 한번 되물었어 no
너의 이름이 뭐냐고
my cherry blossom
It aint fall yet so dont leave
We can solve it
(We can solve it)

Loving you feels like Im dreaming
꿈만 같아
깨어나고 싶지 않아 no
Loving you feels like Im dreaming
숨이 가빠
헤어나고 싶지 않아 no
    </string>
    <string name="representative">대표곡</string>
    <string name="nct127_daydream">day dream</string>
    <string name="strem_song">
        너를 향해 기운 우산이\n
이렇게 때마침\n
참 작아서 다행이야\n
hoo 이런 건\n
예상하지 못한 상황이야\n
어깨가 닿은 이 순간\n

‘어디 들어갈 델 찾자’\n
말하면서도 내 걸음은\n
자꾸만 하염없이 느려져\n

    </string>
    <string name="lovesong_lyrics">
        너를 향해 기운 우산이\n
이렇게 때마침\n
참 작아서 다행이야\n
hoo 이런 건\n
예상하지 못한 상황이야\n
어깨가 닿은 이 순간\n

어디 들어갈 델 찾자\n
말하면서도 내 걸음은\n
자꾸만 하염없이 느려져\n
I cant stop I cant stop this feeling\n

너의 숨소리도 들려\n
이렇게 가까우니까\n
이대로 투명해진 채\n
시간이 멈췄으면 해 yeah\n

비는 질색인데\n
오늘 좀 좋아지려 해\n
아니 아직 그칠 생각은 말고\n
왼쪽 어깨는 흠뻑 적셔 놔도 돼\n
빗속의 Love song\n
Love song Love song yeah\n
둘만의 섬을 만들어 ooh\n
이렇게 Love this Love this Love this rain\n
떨어지는 빗속에 all day\n

오늘따라 더 익숙한 거리도 헤매고 싶어 난\n
ooh 저번 그 예쁜 카페가 어디 더라\n
잘 기억나지 않아\n

너의 눈에 내가 비쳐\n
이렇게 가까우니까\n
날 보며 웃음 지을 땐\n
심장이 멎을 것 같아 yeah\n

비는 질색인데\n
오늘 좀 좋아지려 해\n
아니 아직 그칠 생각은 말고\n
왼쪽 어깨는 흠뻑 적셔 놔도 돼\n
빗속의 Love song\n
Love song Love song yeah\n
둘만의 섬을 만들어 ooh\n
이렇게 Love this Love this Love this rain\n
떨어지는 빗속에 all day\n

in this place\n
just you and me\n
outside all blurry\n
my focus clear as day 2.0 2.0\n
warm and cozy\n
covering us from all the crazy\n

rain dont stop 비 내려와\n
둘이서 1인용 umbrella 아래\n
내 하루는 so bright\n
떠올라 넌 지지 않는 나의 빛\n

doo doo doo rain drop\n
hop out my foreign car\n
흠뻑 젖은 이 아스팔트 위에는\n
한편의 scene을 만들어내지\n

어느새 여기 내 안에 네가 겹쳐와\n
내 맘속에 너는 저 촉촉한 비처럼\n
스며들어와\n

비는 질색인데\n
오늘 좀 좋아지려 해\n
아니 아직 그칠 생각은 말고\n
왼쪽 어깨는 흠뻑 적셔 놔도 돼\n
빗속의 Love song\n
Love song Love song yeah\n
둘만의 섬을 만들어 ooh\n
이렇게 Love this Love this Love this rain\n
떨어지는 빗속에 all day</string>
    <string name="nct_hero_li">
    Let me introduce you to some\n
    new thangs new thangs new thangs\n
    bass kick swingin’ like\n
    I’m Bruce Lee Bruce Lee Bruce Lee\n
        shimmy shimmy shimmy\n
        불이 붙네 불이 붙네\n
        이 무대 위로 뜰 땐\n
        난 앞으로 찔러 좌우 Bruce Lee\n
        날아다녀 하루 종일 Bruce Lee\n
                Comin’ up 지금 여기로\n
        baby 이 느낌은 이해 못 해 머리론\n
        fighting for all day\n
        아무 생각 말고 너의 이야기대로 걸어\n

        \n어두운 어제가 오늘을 삼켜 버리기 전에\n
        내 목소린 더 퍼져야 해 소리치면 돼\n
        내겐 no more trauma\n

        \nBaby we go wild\n
        one two seven squad\n
        난 앞으로 질러 pow\n
        좌우로 내질러 pow\n

        \n난 앞으로 찔러 좌우\n
        new thangs new thangs new thangs\n
        우리가 어딜 가든 축제\n
        들어 축배 like my birthday\n
        모두 감아 차올리지 높이\n
        Where ma roof at 지붕이 우주에\n
        (na na na na na na)\n
        난 앞으로 찔러 좌우 Bruce Lee\n
        날아다녀 하루 종일 Bruce Lee\n
        (na na na na na na)\n

        \n(Ya!)\n
        got that drip 흘러 넘쳐 Guts 잃어버린 겁\n
        어디서든 make it poppin’\n
        keep it movin’ like ‘Jeet Kune’\n
        내 앞을 막을 땐\n
        ‘Samuel Jackson’ 돼 wassup?\n
        배배 꼬인 놈\n
        Baby you just gotta watch\n

        \n`Enter The Dragon` 난 영화같이\n
        걸음걸이마저 Martial Arts\n
        Looking that everybody looking at me\n
        Cams Action Movie shh\n

        \n쓰러뜨려 하나씩\n
        (쉿) blows away\n
        자비는 없지 ruthless\n
        droppin’ the bomb on ma enemies\n
        and I’m gonna kick it like Bruce Lee\n

        \n수많은 날들의 같은 장면을 반복한 끝에\n
        어제의 날 무너뜨리고 소리치면 돼\n
        내겐 no more trauma\n

        \nBaby we go wild\n
        one two seven squad\n
        We ain’t never gonna stop\n
        끝이 안 보여도 가

        \n난 앞으로 찔러 좌우\n
        new thangs new thangs new thangs\n
        (na na na na na na)\n
        난 앞으로 찔러 좌우 Bruce Lee\n
        날아다녀 하루 종일 Bruce Lee\n
        (na na na na na na)\n

        \nMy world 만들어가 yeah\n
        상상조차 할 수 없었던\n
        아주 극적인 장면 그 깊은 곳에\n
        눈앞에 펼쳐질 새로운 세상들\n
        손안에 잡힐 듯 내 안으로 들어와\n
        어둠 끝에 다시 난 새로 태어나\n

        \n난 앞으로 찔러 좌우\n
        new thangs new thangs new thangs\n
        우리가 어딜 가든 축제\n
        들어 축배 like my birthday\n
        (eh eh eh eh eh eh)\n

        \nshimmy shimmy shimmy 불이 훅\n
        shimmy shimmy shimmy 훅\n
        높이 Where ma roof at\n
        지붕이 우주에\n
        (na na na na na na)\n
        난 앞으로 찔러 좌우 Bruce Lee\n
        날아다녀 하루 종일 Bruce Lee\n
        (na na na na na na)\n
        날아다녀 하루 종일 Bruce Lee\n
    </string>
    <string name="yeong_es">
    터벅터벅 그 걸음으로\n
    어느 세월에 내게 오나요\n
    저 푸른 하늘 새들처럼\n
    날개를 달고 와야죠\n
    이리저리 돌아보면서\n
    어느 천년에 내게 오나요\n
    더 늦기 전에 돌아와요\n
    빨리빨리 오세요\n

    \n사랑아 멀어진 나의 사랑아\n
    내 님아 보고픈 나의 사람아\n

    \n어~허야 내가 내가 간다\n
    그리운 내 님 곁으로\n
    늦기 전에 더 늦기 전에\n
    계단 말고 엘리베이터\n

    \n터벅터벅 그 걸음으로\n
    어느 세월에 내게 오나요\n
    저 푸른 하늘 새들처럼\n
    날개를 달고 와야죠\n
    이리저리 돌아보면서\n
    어느 천년에 내게 오나요\n
    더 늦기 전에 돌아와요\n
    빨리빨리 오세요\n

    \n사랑아 멀어진 나의 사랑아\n
    내 님아 보고픈 나의 사람아\n

    \n어~허야 내가 내가 간다\n
    그리운 내 님 곁으로\n
    늦기 전에 더 늦기 전에\n
    계단 말고 엘리베이터\n

    \n계단 말고 엘리베이터\n
    </string>
    <string name="strem_list">재생목록</string>
    <string name="stream_main">재생창</string>
    <string name="stream_nowplay">현재 재생곡</string>
    <string name="time">3:35</string>
    <string name="repeat_play">반복재생</string>
    <string name="delete">곡 삭제</string>
    <string name="stream_stop">정지</string>
    <string name="stream_play">재생</string>
    <string name="strem_before">이전</string>
    <string name="strem_nex">다음</string>
    <string name="text8">NCT 127</string>
    <string name="text9">우산(Love Song)</string>
    <string name="tutorialmain_s">아래 5가지 방법 중 원하는 것을 선택하세요.</string>
    <string name="tutorialsub_s">음악 듣는 방법 따라해보기</string>
    <string name="tuto_op4">재생목록 노래 삭제하기</string>
    <string name="tuto_op3">곡 검색해서 노래 듣기</string>
    <string name="tuto_op2">가수 검색해서 노래 듣기</string>
    <string name="tuto_op1">인기차트에서 노래 듣기</string>
    <string name="tutorial_finger">화면에 나오는 위 모양의 손가락을 따라해주세요.</string>
    <string name="tuto_ok">확인</string>
    <string name="tuto_op1_2_scroll">화면을 위로 올려주세요!</string>
    <string name="tuto_op1_2_popular"><b>인기차트</b> 버튼을 눌러주세요!</string>
    <string name="tuto_op1_3_play">원하는 곡의 <b>재생</b> 버튼을 눌러주세요!</string>
    <string name="tuto_go_tutomain">튜토리얼 메인으로 이동하기</string>
    <string name="tuto_op1_4">재생 목록에 추가되었으면 완료!</string>
    <string name="tuto_op2_2"><b>음악/가수 검색하기</b> 버튼을 눌러주세요!</string>
    <string name="tuto_op2_3">검색바를 눌러 <b>임영웅</b>를 입력해주세요!</string>
    <string name="tuto_op2_4">원하는 곡의 <b>재생</b> 버튼을 눌러주세요!</string>
    <string name="tuto_op3_3">검색바를 눌러 <b>이제나만믿어요</b>를 입력해주세요!</string>
    <string name="tuto_op4_2"><b>재생바</b>를 눌러주세요!</string>
    <string name="tuto_op4_3"><b>재생 목록</b> 버튼을 눌러주세요!</string>
    <string name="tuto_op4_4"><b>곡 명</b>과 <b>가수 이름</b>이 적혀있는 곳을 눌러주세요!</string>
    <string name="tuto_op4_5">선택한 노래의 바탕색이 변하면 <b>곡 삭제</b> 버튼을 눌러주세요!</string>
    <string name="tuto_op4_6">재생목록에서 노래가 없으면 완료!</string>
    <string name="title_activity_player_">Player_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>