<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artboard"
    android:layout_width="394.0dp"
    android:layout_height="2504.5dp"
    android:background="@drawable/artboard">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:id="@+id/draw8"
            android:layout_width="394.0dp"
            android:layout_height="2155.5dp"
            android:background="@drawable/artboard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="349dp">

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/lovesong_lyrics"
                android:textColor="@color/color_ff000000"
                android:textSize="22.5sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4150dp"/>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
            android:id="@+id/draw7"
            android:layout_width="394.0dp"
            android:layout_height="258.5dp"
            android:background="@drawable/strem_page_up"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <RelativeLayout
                android:id="@+id/mini_home_search_btn"
                android:layout_width="394.0dp"
                android:layout_height="115.0dp"
                android:layout_marginTop="16.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/mini_play_btn"
                    android:layout_width="200.0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="210dp"
                    android:layout_marginTop="33.5dp"
                    android:background="@drawable/mini_search_button"
                    android:drawableStart="@drawable/mini_playbutton"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/stream_main"
                    android:textColor="#000000"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/mini_home_btn"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="33.5dp"
                    android:background="@drawable/mini_home_button"
                    android:gravity=""
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/mini_home_text"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </RelativeLayout>
        </RelativeLayout>
    <RelativeLayout
            android:id="@+id/draw6"
            android:layout_width="355.0dp"
            android:layout_height="169.5dp"
            android:background="@drawable/stream_playsong_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="19.5dp"
            android:layout_marginTop="135dp">
            //현재 재생 음악
            <RelativeLayout
                android:id="@+id/draw5"
                android:layout_width="188.5dp"
                android:layout_height="43.5dp"
                android:background="@drawable/mini_nowplaysong_box"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="162dp"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_nowplay"
                    android:gravity="start|top"
                    android:textColor="@color/color_ffffffff"
                    android:textSize="30sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="25.5dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nct127"
                android:gravity="start|top"
                android:textColor="@color/color_ff000000"
                android:textSize="22.5sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="132.5dp"
                android:layout_marginTop="118.5dp"/>
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nct_love_song"
                android:gravity="start|top"
                android:textColor="@color/color_ff000000"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64.5dp"
                android:layout_marginTop="76.5dp"/>
        </RelativeLayout>
    </RelativeLayout>
