<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artboard"
    android:layout_width="394.0dp"
    android:layout_height="782.0dp"
    android:background="@drawable/tuto_playlist">
    <RelativeLayout
        android:id="@+id/draw59"
        android:layout_width="394.0dp"
        android:layout_height="782.0dp"
        android:background="@drawable/tuto_exp_pure_tool"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RelativeLayout
            android:id="@+id/draw54"
            android:layout_width="393.0dp"
            android:layout_height="473.0dp"
            android:background="@drawable/tuto_exp_tool"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="309dp">
            <Button
                android:id="@+id/button_go_tuto"
                android:layout_width="328.5dp"
                android:layout_height="53.0dp"
                android:background="@drawable/tuto_ok_btn"
                android:text="@string/tuto_go_tutomain"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="229dp">
            </Button>
            <ImageView
                android:id="@+id/image17"
                android:layout_width="100.0dp"
                android:layout_height="100.0dp"
                android:src="@drawable/tuto_finger_success"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12.5dp"
                android:layout_marginTop="7.5dp"/>
            <TextView
                android:id="@+id/text41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuto_op1_4"
                android:gravity="center_horizontal|top"
                android:textColor="@color/color_ff000000"
                android:textSize="22.5sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="130.5dp"
                android:layout_marginTop="31.5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/draw58"
            android:layout_width="394.0dp"
            android:layout_height="109.5dp"
            android:background="@drawable/button_no_color_layer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="191.5dp">
            <RelativeLayout
                android:id="@+id/draw57"
                android:layout_width="362.5dp"
                android:layout_height="98.5dp"
                android:background="@drawable/streaming_playlist_color_control"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5.5dp">
                <TextView
                    android:id="@+id/image18"
                    android:layout_width="197.5dp"
                    android:layout_height="31.5dp"
                    android:text="@string/yeong"
                    android:textSize="25sp"
                    android:textColor="@color/color_ff000000"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="107.5dp"
                    android:layout_marginTop="51dp"/>
                <ImageView
                    android:id="@+id/image19"
                    android:layout_width="101.5dp"
                    android:layout_height="98.5dp"
                    android:src="@drawable/boy2_music1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/image20"
                    android:layout_width="197.5dp"
                    android:layout_height="31.5dp"
                    android:text="@string/yeong_trust_me"
                    android:textSize="27sp"
                    android:textColor="@color/color_ff000000"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="107.5dp"
                    android:layout_marginTop="17dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/draw55"
                android:layout_width="75.0dp"
                android:layout_height="75.0dp"
                android:background="@drawable/song_play_lay"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="314dp"
                android:layout_marginTop="17.5dp">
                <TextView
                    android:id="@+id/text42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:gravity="start|top"
                    android:textColor="@color/color_ff020202"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="20.5dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>