<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artboard"
    android:layout_width="394.0dp"
    android:layout_height="782.5dp"
    android:background="@drawable/artboard">
    <RelativeLayout
        android:id="@+id/draw14"
        android:layout_width="394.0dp"
        android:layout_height="782.5dp"
        android:background="@drawable/button_no_color_layer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RelativeLayout
            android:id="@+id/draw10"
            android:layout_width="365.5dp"
            android:layout_height="401.0dp"
            android:background="@drawable/button_no_color_layer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            android:layout_marginTop="290.5dp">
            <Button
                android:id="@+id/tuto_ok_btn"
                android:layout_width="100.0dp"
                android:layout_height="53.0dp"
                android:text="@string/tuto_ok"
                android:textSize="30sp"
                android:background="@drawable/tuto_ok_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="133dp"
                android:layout_marginTop="321.5dp">

            </Button>
            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_finger"
                android:gravity="center_horizontal|top"
                android:textColor="@color/color_ff000000"
                android:textSize="22.5sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="228dp"/>
            <ImageView
                android:id="@+id/image5"
                android:layout_width="150.0dp"
                android:layout_height="150.0dp"
                android:src="@drawable/tuto_finger_original"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="108dp"
                android:layout_marginTop="34dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/draw13"
            android:layout_width="394.0dp"
            android:layout_height="219.0dp"
            android:background="@drawable/tutorial_up_tool"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorialsub_s"
                android:gravity="start|top"
                android:textColor="@color/color_ff000000"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="60dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/draw11"
            android:layout_width="350.0dp"
            android:layout_height="107.0dp"
            android:background="@drawable/tutorial_option_tool"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp"
            android:layout_marginTop="130.5dp">
            <ImageView
                android:id="@+id/image6"
                android:layout_width="75.0dp"
                android:layout_height="75.0dp"
                android:src="@drawable/tuto_song"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12.5dp"
                android:layout_marginTop="16dp"/>
            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuto_op3"
                android:gravity="start|top"
                android:textColor="@color/color_ff000000"
                android:textSize="22.5sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="100dp"
                android:layout_marginTop="38.5dp"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>