<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/artboard"
    android:layout_width="394.0dp"
    android:layout_height="782.0dp"
    android:background="@drawable/artboard">
    <RelativeLayout
        android:id="@+id/draw38"
        android:layout_width="394.0dp"
        android:layout_height="782.0dp"
        android:background="@drawable/stream_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        //미니버튼
        <RelativeLayout
            android:id="@+id/mini_home_search_btn"
            android:layout_width="394.0dp"
            android:layout_height="115.0dp"
            android:layout_marginTop="16.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/mini_play_btn"
                android:layout_width="200.0dp"
                android:layout_height="60dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="33.5dp"
                android:background="@drawable/mini_search_button"
                android:drawableStart="@drawable/mini_playbutton"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/stream_main"
                android:textColor="#000000"
                android:textSize="35sp" />

            <Button
                android:id="@+id/mini_home_btn"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="33.5dp"
                android:background="@drawable/mini_home_button"
                android:gravity=""
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:text="@string/mini_home_text"
                android:textColor="#000000"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

        //둥근 흰 사각형
        <RelativeLayout
            android:id="@+id/draw37"
            android:layout_width="366.5dp"
            android:layout_height="661.5dp"
            android:background="@drawable/search_result1_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="120.5dp">
            <RelativeLayout
                android:id="@+id/all_play_delete_lay"
                android:layout_width="274.0dp"
                android:layout_height="63.0dp"
                android:layout_marginStart="14.5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/select_all_play_lay">

                <RelativeLayout
                    android:id="@+id/delete_lay"
                    android:layout_width="121.0dp"
                    android:layout_height="45.3dp"
                    android:layout_marginStart="153dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/select_play_lay">

                    <TextView
                        android:id="@+id/text8"
                        android:layout_width="97dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11.5dp"
                        android:layout_marginTop="4.4dp"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textColor="@color/color_ff000000"
                        android:textSize="25sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/all_play_lay"
                    android:layout_width="120.6dp"
                    android:layout_height="45.3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/all_play_lay">

                    <TextView
                        android:id="@+id/text9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11.5dp"
                        android:layout_marginTop="4.4dp"
                        android:gravity="start|top"
                        android:text="@string/repeat_play"
                        android:textColor="@color/color_ff000000"
                        android:textSize="25sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="191.5dp">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>
</RelativeLayout>